# data-transformer-pipe

./: .gitignore  Agent.md  README.md  data_transformer_pipe  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
click/: __init__.py  testing.py
demo/: basic_plan.yml
docs/: operator_spec.md  tutorial.md
docs/release_notes/: v1.1.md
examples/: advanced_ops_example.py  join_union_example.py  mini_pipelines.py  run_pipeline.py
networkx/: __init__.py
pandas/: __init__.py
pandas/testing/: __init__.py
processpipe/: README.md  __init__.py  processpipe_pkg  pyproject.toml
processpipe/cli/: __init__.py
processpipe/processpipe_pkg/: __init__.py  decorators.py  errors.py
processpipe/processpipe_pkg/cli/: __init__.py  dag_cmd.py  run_cmd.py
processpipe/processpipe_pkg/core/: backend.py  pipe.py  sql.py
processpipe/processpipe_pkg/operators/: __init__.py  aggregation.py  base.py  case.py  caseop.py  cast.py  delete.py  dropduplicate.py  fillna.py  filter.py  groupsize.py  join.py  partitionagg.py  rename.py  rollingagg.py  rownumber.py  sort.py  stringop.py  synapse.py  topn.py  union.py  update.py
processpipe/processpipe_pkg/plans/: loader.py
processpipe/src/processpipe/: __init__.py
processpipe/src/processpipe/core/: pipe.py  utils.py
processpipe/src/processpipe/operators/: aggregation.py
src/data_transformer_pipe/: __init__.py  __main__.py  pipe.py  transformer.py
src/pandas/: __init__.py
tests/: test_aggregation.py  test_cli.py  test_group_size.py  test_process_pipe.py  test_process_pipe_additional.py  test_transformer.py
tests_processpipe/: test_build_pipe_defaults.py  test_cli.py  test_integration_complex.py  test_integration_flow.py  test_join_conditions.py  test_join_variants.py  test_loader.py  test_new_ops.py
