[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-transformer-pipe"
version = "0.1.0"
description = "A declarative, pandas-based ETL library"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourname/data-transformer-pipe"

[project.scripts]
data-transformer-pipe = "data_transformer_pipe.__main__:main"

[tool.setuptools.packages.find]
where = ["src", "processpipe"]

