[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-transformer-pipe"
version = "0.1.0"
description = "A declarative, pandas-based ETL library"
authors = [
    { name="Your Name", email="you@example.com" }
]
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yourname/data-transformer-pipe"

[project.scripts]
data-transformer-pipe = "data_transformer_pipe.__main__:main"
pp = "processpipe.cli:main"

[tool.setuptools.packages.find]
where = ["src", "processpipe"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
