[project]
name = "processpipe"
version = "0.1.0"
description = "In-memory fluent ETL for pandas DataFrames"
authors = [{ name = "Data Engineering Team" }]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.1",
  "networkx>=3.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
